// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSSWrapper component doesn't render if not passed CSS blob 1`] = `
<div>
  <p>
    Example text
  </p>
</div>
`;

exports[`CSSWrapper component renders if passed CSS blob 1`] = `
<div>
  <div
    class="c-PJLV c-PJLV-ikLAKdM-css"
    data-testid="css-wrapper"
  >
    <p>
      Example text
    </p>
  </div>
</div>
`;
